# omnifeed

./: .gitignore  README.md  dev.sh  pyproject.toml
api/: __init__.py  main.py
docs/: architecture.md  feedback-system.md  product-spec.md  ranking-model.md
docs/design/: platform-vs-discovery.md
docs/vision/: multi-objective-ranking.md
extension/: package-lock.json  package.json  tsconfig.json
extension/manifest/: chrome.manifest.json  firefox.manifest.json
extension/scripts/: build.mjs
omnifeed/: __init__.py  cli.py  config.py  ingestion.py  models.py  scoring.py
omnifeed/adapters/: __init__.py  bandcamp.py  base.py  qobuz.py  registry.py  rss.py  youtube.py
omnifeed/creators/: __init__.py  extractor.py
omnifeed/discovery/: __init__.py  engine.py  interests.py  llm.py
omnifeed/featurization/: __init__.py  audio.py  text.py
omnifeed/migrations/: __init__.py  cleanup_creators.py  hydrate_creators.py  migrate_creators.py
omnifeed/ranking/: __init__.py  audio_embeddings.py  base.py  embeddings.py  extractors.py  model.py  model_registry.py  multi_objective.py  pipeline.py  registry.py  transcript_embeddings.py
omnifeed/retriever/: __init__.py  orchestrator.py  registry.py  scoring.py  types.py
omnifeed/search/: __init__.py  bandcamp.py  base.py  feedly.py  qobuz.py  service.py  youtube.py
omnifeed/sources/: __init__.py  base.py  registry.py
omnifeed/store/: __init__.py  base.py  factory.py  file.py  migrate.py  sqlite.py
scripts/: migrate_youtube_sources.py
tests/: __init__.py  test_store.py
web/: package-lock.json  package.json
(+89 files in other folders)
